--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
+    "sequelize-cli": "^6.3.0",
     "supertest": "^6.0.1"
   }
 }
